# LIRA

./: .gitignore  CMakeLists.txt  README.md  readme.md
.github/workflows/: ci.yml
cmake/: CPM.cmake
docs/: ir_ops.md  lira_ir.md  ops_std.md
python/: ir_ser_txt.py  pyproject.toml
python/example/: README.md  integration_test.py
python/examples/: README.md  example.py
python/lira/: __init__.py  arch.py  arch_ser.py  arch_ser_txt.py  arch_ser_yaml.py  arch_utils.py  ir.py  ir_builder.py  ir_ops.py  ir_ser_txt.py  ir_std.py
python/tests/: README.md  test_ir_ser.py
python/tests/integration/: integration.yaml  test_integration.py
python/tests/unit/: test_arch_ser_yaml.py  test_ir_builder.py  test_ir_ser_txt.py
ruby/: Gemfile  lira.gemspec  lira.rb
ruby/example/: README.md  integration_test.rb
ruby/examples/: README.md  example.rb
ruby/lib/lira/: version.rb
ruby/lira/: arch.rb  arch_ser.rb  arch_ser_txt.rb  arch_ser_yaml.rb  arch_utils.rb  ir.rb  ir_builder.rb  ir_ops.rb  ir_ser_txt.rb  ir_std.rb
ruby/tests/: README.md
ruby/tests/integration/: test_integration.rb
ruby/tests/unit/: test_arch_ser_yaml.rb  test_ir_builder.rb  test_ir_ser_txt.rb
rust/: Cargo.toml
rust/examples/: Cargo.toml  README.md  example.rs
rust/lira/: Cargo.toml
rust/lira/src/: arch.rs  arch_ser_txt.rs  arch_ser_yaml.rs  arch_utils.rs  ir.rs  ir_builder.rs  ir_ops.rs  ir_ser_txt.rs  ir_std.rs  lib.rs
rust/lira/tests/: README.md  integration.rs
rust/lira_trs/: Cargo.toml
rust/lira_trs/src/: dfg.rs  egraph.rs  impl_dfg3egraph.rs  impl_egraph.rs  lib.rs
rust/lira_trs/tests/: opt.egg  replace.egg  replace.rs  rewrite.rs
rust/tests/: Cargo.toml  README.md
rust/tests/integration/: main.rs
rust/tests/unit/: test_arch_ser_yaml.rs  test_ir_builder.rs  test_ir_ser_txt.rs
tests/cross_language/: test_cross.py  test_cross.rb  test_cross.rs
tools/: yaml_canonicalize.py
utils/vscode/: readme.md
utils/vscode/dsl_lira/: package.json
utils/vscode/dsl_lira/syntaxes/: dsl_lira.tmLanguage.json
