[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lira-ir"
version = "0.1.0"
description = "LIRA is a framework that provides a data-flow Intermediate Representation."
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
