[workspace]
resolver = "3"

members = ["lira"]

[workspace.dependencies]
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.10"
clap = "4.6.1"
ahash = "0.8.12"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"

[profile.work]
inherits = "dev"
opt-level = 2

[profile.optimize]
inherits = "release"
lto = "thin"
